<resources>
    <string name="app_name">Magic DB</string>
    <string name="title_activity_settings">SettingsActivity</string>

    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <string name="todo">TODO</string>
    <string name="this_is_a_magic_card_and_you_can_play_with_them_and_it_has_a_lot_of_characters" />
    <string name="type_creature_avatar" />
    <string name="artist_someone" />
    <string name="rarity_common" />
    <string name="archangel_avacyn" />
    <string name="settings" />
</resources>