<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.magicdb.ui.main.DetailActivity">


    <ImageView
        android:id="@+id/ivPosterImage"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginLeft="12dp"
        android:layout_marginTop="12dp"
        android:adjustViewBounds="true"
        android:contentDescription="@string/todo"
        android:maxHeight="160dp"
        android:scaleType="fitXY"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:text="@string/archangel_avacyn"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintLeft_toRightOf="@+id/ivPosterImage"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvRarity"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/rarity_common"
        android:textSize="14sp"
        app:layout_constraintLeft_toLeftOf="@+id/tvName"
        app:layout_constraintTop_toBottomOf="@+id/tvName" />

    <TextView
        android:id="@+id/tvArtist"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/artist_someone"
        android:textSize="14sp"
        app:layout_constraintLeft_toLeftOf="@+id/tvRarity"
        app:layout_constraintTop_toBottomOf="@+id/tvRarity" />

    <TextView
        android:id="@+id/tvType"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginRight="16dp"
        android:text="@string/type_creature_avatar"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="@+id/tvArtist"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintStart_toStartOf="@+id/tvArtist"
        app:layout_constraintTop_toBottomOf="@+id/tvArtist" />

    <TextView
        android:id="@+id/tvText"
        android:layout_width="230dp"
        android:layout_height="163dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="52dp"
        android:layout_marginRight="52dp"
        android:text="@string/this_is_a_magic_card_and_you_can_play_with_them_and_it_has_a_lot_of_characters"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="@+id/tvType"
        app:layout_constraintRight_toRightOf="@+id/tvType"
        app:layout_constraintStart_toStartOf="@+id/tvType"
        app:layout_constraintTop_toBottomOf="@+id/tvType" />

</androidx.constraintlayout.widget.ConstraintLayout>
